frome oblikovanje ispravci

--- a/src/main/resources/templates/BIS.html
+++ b/src/main/resources/templates/BIS.html
@@ -14,64 +14,64 @@
   <style>
 
 
-        Body {
+    Body {
 
-            font-size: large;
-        }
+      font-size: large;
+    }
 
-        input[type=number],
-        textarea[id=opis] {
-            width: 100%;
-            margin: 8px 0;
-            padding: 12px 20px;
-            display: inline-block;
-            border: 2px solid #f24521;
-            box-sizing: border-box;
-        }
+    input[type=number],
+    textarea[id=opis] {
+      width: 100%;
+      margin: 8px 0;
+      padding: 12px 20px;
+      display: inline-block;
+      border: 2px solid #f24521;
+      box-sizing: border-box;
+    }
 
-        button {
-            border-style: none;
-            background-color: white;
-        }
+    button {
+      border-style: none;
+      background-color: white;
+    }
 
-        .box {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        box-shadow: 0 15px 25px rgba(0,0,0,.6);
-        width: 1000px;
-        padding: 40px;
-        box-sizing: border-box;
-        border-radius: 50px;
-        }
-    </style>
+    .box {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      box-shadow: 0 15px 25px rgba(0,0,0,.6);
+      width: 1000px;
+      padding: 40px;
+      box-sizing: border-box;
+      border-radius: 50px;
+    }
+  </style>
 </head>
 
 <body>
 <div class="box">
 
 
-  <nav class="navbar navbar-light bg-light navbar-expand-sm">
+  <nav class="navbar navbar-light navbar-expand-sm">
     <a class="navbar-brand" href="#">
-      <img src="logo.png" width="30%" alt="logo">
+      <img src="../ikone/MediqueLogo.png" width="135"/>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-list-4" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbar-list-4">
       <ul class="navbar-nav">
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="pacijent.png" width="50" height="50" class="rounded-circle">
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="logIn.html">Log out</a></li>
-            <!--<li><a class="dropdown-item" href="#">Another action</a></li>
+           <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-          </ul>
-        </li>
+      </ul>
+      </li>
       </ul>
     </div>
   </nav>
@@ -118,8 +118,8 @@
 
     </div>
     <footer style="color: #74707b; text-align:center">Copyright &#169; MEDIQUE / All rights reserved</footer>
+  </div>
 </div>
-
 </body>
 
 </html>
