--- a/src/main/resources/templates/legend.html
+++ b/src/main/resources/templates/legend.html
@@ -65,8 +65,7 @@
                     <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
             </div>
             <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
-                <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
-                    <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
+                <h2 class="flex-grow-1 text-white" style="text-align: center"><b>D</b></h2>
             </div>
             <div class="col-md-2 d-flex align-items-center justify-content-end">
                 <button onclick="blink()">
@@ -76,25 +75,14 @@
         <hr class="solid">
     </div>
 </div>
-<div class="row">
-    <div class="container-flex">
-        <div class="row">
-            <div class="col-lg-4 col-md-12 p-3">
-                <h4><b></b></h4>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="py-3" style="">
     <div class="container-flex">
-        <h3 class="text-center display-4" contenteditable="true" >Tumač znakova&nbsp;</h3>
-        <div class="p-3 text-muted border-down">
-        </div>
+        <h1 contenteditable="true" class="text-center text-muted">Tumač znakova&nbsp;</h1>
     </div>
 </div>
 <div class="">
     <div class="container-flex">
-        <div class="table-responsive">
+        <div class="table-responsive" style="">
             <table class="table table-bordered table-striped">
                 <thead class="thead-dark">
                 <tr class="display: inline-block">
@@ -105,7 +93,7 @@
                         <h3 class=".d-print-table-cell">Dijagnostika</h3>
                     </th>
                     <th class="font-weight-bold">
-                        <h3>Opis</h3>
+                        <h3 class="d-flex" >Opis</h3>
                     </th>
                 </tr>
                 </thead>
@@ -119,8 +107,8 @@
                     <td class="font-weight-bold">
                         <h3 class="">OBRADA LIJEČNIKA</h3>
                     </td>
-                    <td class="font-weight-bold d-flex text-left">
-                        <h3 class="text-nowrap">Pacijent se trenutno nalazi na obradi od strane liječnika na odjelu Objedinjenog hitnog bolničkog prijema.</h3>
+                    <td class="font-weight-bold text-left">
+                        <h3 class="d-flex">Pacijent se trenutno nalazi na obradi od strane liječnika na odjelu Objedinjenog hitnog bolničkog prijema.</h3>
                     </td>
                 </tr>
                 <tr>
@@ -170,8 +158,8 @@
                     <td class="font-weight-bold">
                         <h3>LABORATORIJSKA DIJAGNOSTIKA</h3>
                     </td>
-                    <td class="font-weight-bold d-flex text-left">
-                        <h3 class="">U tijeku je laboratorijska dijagnostika.</h3>
+                    <td class="font-weight-bold text-left">
+                        <h3 class="d-flex">U tijeku je laboratorijska dijagnostika.</h3>
                     </td>
                     <td class="font-weight-bold"></td>
                 </tr>
@@ -190,7 +178,7 @@
                 </tr>
                 <tr>
                     <td class="font-weight-bold">
-                        <h3>OPSERVACIJA </h3>
+                        <h3>STATUS</h3>
                     </td>
                     <td class="font-weight-bold">
                         <h3></h3>
@@ -232,4 +220,5 @@
     </div>
 </div>
 </body>
+
 </html>
