--- a/src/main/resources/templates/triage_category.html
+++ b/src/main/resources/templates/triage_category.html
@@ -11,7 +11,7 @@
         .table {
             border-collapse: separate;
             border-spacing: 0 30px;
-            text-justify: center;
+            text-justfy: center;
             text-align: center;
         }
 
@@ -62,8 +62,7 @@
                     <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
             </div>
             <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
-                <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
-                    <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
+                <h2 class="flex-grow-1 text-white" style="text-align: center;" ><b>D</b></h2>
             </div>
             <div class="col-md-2 d-flex align-items-center justify-content-center">
                 <button onclick="blink()">
@@ -73,17 +72,11 @@
         <hr class="solid">
     </div>
 </div>
-<div class="py-3" style="">
-    <div class="container-flex">
-    </div>
-</div>
 <div class="p-3 text-muted border-top">
     <h2 draggable="true"> </h2>
     <h1 style="" class="text-center">Tumač trijažnih kategorija&nbsp;</h1>
+    <div class="p-3 text-muted border-top"></div>
     <div style="">
-        <h1 style="" class="text-center"></h1>
-        <div class="p-3 text-muted border-top">
-        </div>
         <div class="">
             <div class="container-flex">
                 <div class="table-responsive" style="">
@@ -97,7 +90,7 @@
                                 <h3 class=".d-print-table-cell">ID</h3>
                             </th>
                             <th class="font-weight-bold">
-                                <h3 >Opis</h3>
+                                <h3 class="d-flex">Opis</h3>
                             </th>
                         </tr>
                         </thead>
@@ -110,7 +103,8 @@
                                 <h3>Trijažna kategorija 1</h3>
                             </td>
                             <td class="font-weight-bold">
-                                <h3 class="d-flex">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Postupiti odmah sa ciljem održavanja života pacijenta</h3>
+                                <h3 class="d-flex flex-grow-1">Postupiti odmah sa ciljem održavanja života pacijenta</h3>
+                                <h3 class="d-flex flex-grow-1 text-light">.</h3>
                             </td>
                         </tr>
                         <tr>
@@ -121,7 +115,8 @@
                                 <h3>Trijažna kategorija 2</h3>
                             </td>
                             <td class="font-weight-bold">
-                                <h3 class="d-flex">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Ozbiljno bolestan ili ozlijeđen pacijent.&nbsp;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Potrebno pristupiti unutar 15 minuta.</h3>
+                                <h3 class="d-flex">Ozbiljno bolestan ili ozlijeđen pacijent.&nbsp;</h3>
+                                <h3 class="d-flex" style="">Potrebno pristupiti unutar 15 minuta.</h3>
                             </td>
                         </tr>
                         <tr>
@@ -132,7 +127,8 @@
                                 <h3>Trijažna kategorija 3</h3>
                             </td>
                             <td class="font-weight-bold">
-                                <h3 class="d-flex">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Pacijent s ozbiljnim stanjima, ali trenutno stabilan.<br>Potrebno pristupiti unutar 30 minuta.</h3>
+                                <h3 class="d-flex"> Pacijent s ozbiljnim stanjima, ali trenutno stabilan.</h3>
+                                <h3 class="d-flex">Potrebno pristupiti unutar 30 minuta.</h3>
                             </td>
                         </tr>
                         <tr>
@@ -143,7 +139,8 @@
                                 <h3>Trijažna kategorija 4</h3>
                             </td>
                             <td class="font-weight-bold">
-                                <h3 class="d-flex">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Standardni pacijent, bez neposredne opasnosti po život.<br>&nbsp;Potrebno pristupiti unutar 60 minuta.</h3>
+                                <h3 class="d-flex"> Standardni pacijent, bez neposredne opasnosti po život. </h3>
+                                <h3 class="d-flex">Potrebno pristupiti unutar 60 minuta. </h3>
                             </td>
                         </tr>
                         <tr>
@@ -154,7 +151,8 @@
                                 <h3>Trijažna kategorija 5</h3>
                             </td>
                             <td class="font-weight-bold">
-                                <h3 class="d-flex">&nbsp; Pacijenti koji nisu hitni slučajevi i nije im potrebna hitna medicinska pomoć.&nbsp;<br>Potrebno pristupiti unutar 120 minuta.</h3>
+                                <h3 class="d-flex"> Pacijenti koji nisu hitni slučajevi i nije im potrebna hitna</h3>
+                                <h3 class="d-flex">medicinska pomoć. Potrebno pristupiti unutar 120 minuta.</h3>
                             </td>
                         </tr>
                         </tbody>
