--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:HH="http://www.w3.org/1999/xhtml">
+<html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Administrator | OBZ </title>
+    <title> Prijem </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -35,42 +35,29 @@
         .blink {
             animation: blink 1s infinite;
         }
-
     </style>
-
     <script>
-        //timer za promjenu tranice
-        setTimeout(function () {
+        setTimeout(function() {
             window.location.href = "/redirectToDashboardOhbp";
         }, 1800000);
-
     </script>
-
-
     <script>
-        // skripta za blinkanje zivotno ugroženi pacijent
-        var isBlinking = false;
-        var elementToBlink = document.getElementById("element-to-blink");
-        var intervalId;
-        var blinkStatus = localStorage.getItem("blinkStatus");
-
-
         function startBlink() {
             var elementToBlink = document.getElementById("element-to-blink");
             elementToBlink.classList.toggle("blink");
         }
-
 
         function checkBlinkStatus() {
             if (blinkStatus === "true") {
                 startBlink();
             }
         }
-
-
-        // ne rad da se nastavi blinkanje nakon promjene strance, za sad treba na svakoj stranici upaliti gumb
+        var isBlinking = false;
+        var elementToBlink = document.getElementById("element-to-blink");
+        var intervalId;
+        var blinkStatus = localStorage.getItem("blinkStatus");
         window.onload = checkBlinkStatus;
-        window.onbeforeunload = function () {
+        window.onbeforeunload = function() {
             if (isBlinking) {
                 localStorage.setItem("blinkStatus", "true");
             } else {
@@ -84,40 +71,32 @@
 <div class="container-max-width p-3">
     <nav class="navbar navbar-expand-md navbar" style="">
         <div class="container-flex">
-            <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent"
-                 style="">
+            <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
                 <ul class="navbar-nav">
                     <li class="h4 text-light text-center">
-                        <a class="nav-link mx-2"
-                           onclick="window.location.href='/'">Administrator</a>
+                        <a class="nav-link mx-2" onclick="window.location.href='/'">Prijem</a>
                     </li>
                     <li class="h4 text-light text-center d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/dashboard_ohbp'">OHBP</a>
+                        <a class="nav-link mx-2" onclick="window.location.href='/dashboard_ohbp'">Glavni prikaz</a>
                     </li>
                     <li class="h4 text-light text-center d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/obs_ohbp'">OHBP
-                            Opservacija</a>
+                        <a class="nav-link mx-2" onclick="window.location.href='/obs_ohbp'">Opservacija</a>
                     </li>
                     <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/patient_page'">Pacijenti</a>
+                        <a class="nav-link mx-2" onclick="window.location.href='/patient_page'">Čekaonica</a>
                     </li>
                     <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna
-                            kategorija</a>
+                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna kategorija</a>
                     </li>
                     <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti
-                            opservacija</a>
+                        <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti opservacija</a>
                     </li>
-
                     <li class="h4 text-light text-center d-flex">
                         <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
                     </li>
                     <li class="h4 text-light text-center d-flex">
                         <a class="nav-link mx-2" onclick="window.location.href='/redirectToBis'">BIS</a>
                     </li>
-
-
                 </ul>
             </div>
         </div>
@@ -125,20 +104,18 @@
     <div class="h-20 container-flex">
         <div class="container-flex">
             <div id="md-8" style="" class="row">
-                <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
+                <div class="d-flex align-items-center justify-content-start col-md-2" style="">
                     <div class="display-4 p-3 d-flex justify-content-center align-items-center">
                         <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
                             <img src="../ikone/bolnicaLogo.svg" class="img-responsive"></a>
                     </div>
                 </div>
-                <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
-                    <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1"
-                        style="">
-                        <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
+                <div class="text-left d-flex justify-content-center align-items-center col-md-7" style="">
+                    <h3 class="display-4 text-primary" style="" >
+                        <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h3>
                 </div>
-                <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
-                    <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
-                        <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
+                <div class="d-flex align-items-center justify-content-center col-md-1" style="text-align: center;">
+                    <h2 class="flex-grow-1 text-white" style="text-align: center"><b>D</b></h2>
                 </div>
                 <div class="col-md-2 d-flex align-items-center justify-content-end">
                     <button onclick="startBlink()">
@@ -151,18 +128,15 @@
     <div class="" style="">
         <div class="container-flex">
             <div id="element-to-blink" class="toggleBlink">
-                <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI
-                    PACIJENT</h1>
+                <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI PACIJENT</h1>
             </div>
         </div>
     </div>
-    <div class="p-3 text-muted border-top" ></div>
+    <div class="p-3 text-muted border-top"></div>
     <div>
         <div class="container-flex">
-
             <table class="table table-responsive table-striped">
                 <thead>
-
                 <tr>
                     <th class="h3">Trijažna kategorija</th>
                     <th class="h3">ID</th>
@@ -178,85 +152,79 @@
                 </thead>
                 <tbody>
                 <tr th:each="CaseOhbp: ${allCases}">
-                    <td th:text="${CaseOhbp.triageCategory}"
-                        th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
+                    <td th:text="${CaseOhbp.triageCategory}" th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
                     </td>
-                    <td class="h2" th:text="${CaseOhbp.caseID}"/>
-                    <td class="h2" th:text="${CaseOhbp.patientFirstName}"/>
-                    <td class="h2" th:text="${CaseOhbp.patientLastName}"/>
+                    <td class="h2" th:text="${CaseOhbp.caseID}">
+                    </td>
+                    <td class="h2" th:text="${CaseOhbp.patientFirstName}">
+                    </td>
+                    <td class="h2" th:text="${CaseOhbp.patientLastName}">
+                    </td>
                     <td class="h2" th:text="${#dates.format(CaseOhbp.timeOfArrival, 'dd.MM.yyyy HH:mm:ss')}"></td>
-
-                     <td>
-                         <div th:if="${CaseOhbp.patientReTriage == 1}">
-                             <img id="flashing-icon" src="../ikone/ret.webp" />
-                             <script th:inline="javascript">
-                                 var icon = document.getElementById('flashing-icon');
-                                 setInterval(function() {
-                                     if (icon.style.display === 'none') {
-                                         icon.style.display = 'inline';
-                                     } else {
-                                         icon.style.display = 'none';
-                                     }
-                                 }, 500);
-
-                                 setTimeout(function() {
-                                     document.querySelector('img[src="../ikone/ret.webp"]').classList.remove('blinking');
-                                 }, 10000);
-
-                                 var lastBlinkTimestamp = localStorage.getItem('lastBlinkTimestamp');
-                                 if (lastBlinkTimestamp && Date.now() - lastBlinkTimestamp < 10000) {
-                                     document.querySelector('img[src="../ikone/ret.webp"]').classList.add('blinking');
-                                 }
-
-                             </script>
-
-                         </div>
-
-                         <div th:if="${CaseOhbp.patientReTriage == 0}">
-                             <img id="flashing-iconoff" src="../ikone/ret.webp" style="display:none;" />
-                         </div>
-                     </td>
-
+                    <td>
+                        <div th:if="${CaseOhbp.patientReTriage == 1}">
+                            <img id="flashing-icon" src="../ikone/ret.webp" style="display: inline;">
+                            <script th:inline="javascript">
+                                var icon = document.getElementById('flashing-icon');
+                                setInterval(function() {
+                                    if (icon.style.display === 'none') {
+                                        icon.style.display = 'inline';
+                                    } else {
+                                        icon.style.display = 'none';
+                                    }
+                                }, 500);
+                                setTimeout(function() {
+                                    document.querySelector('img[src="../ikone/ret.webp"]').classList.remove('blinking');
+                                }, 10000);
+                                var lastBlinkTimestamp = localStorage.getItem('lastBlinkTimestamp');
+                                if (lastBlinkTimestamp && Date.now() - lastBlinkTimestamp < 10000) {
+                                    document.querySelector('img[src="../ikone/ret.webp"]').classList.add('blinking');
+                                }
+                            </script>
+                        </div>
+                        <div th:if="${CaseOhbp.patientReTriage == 0}">
+                            <img id="flashing-iconoff" src="../ikone/ret.webp" style="display:none;">
+                        </div>
+                    </td>
                     <td class="h2">
                         <span th:text="${CaseOhbp.completedWork}"></span>
                         <span> / </span>
                         <span th:text="${CaseOhbp.workInProgress}"></span>
                     </td>
                     <td>
-                        <img th:if="${CaseOhbp.patientStatus == '0'}" src="/ikone/0.webp" alt="cekaonica/ostalo"/>
-                        <img th:if="${CaseOhbp.patientStatus == '1'}" src="/ikone/1.webp" alt="trijaza"/>
-                        <img th:if="${CaseOhbp.patientStatus == '2'}" src="/ikone/6.webp" alt="pregled dr/ostali postupci"/>
-                        <img th:if="${CaseOhbp.patientStatus == '3'}" src="/ikone/3.webp" alt="RTG, CT, MR"/>
-                        <img th:if="${CaseOhbp.patientStatus == '4'}" src="/ikone/4.webp" alt="Laboratorij"/>
-                        <img th:if="${CaseOhbp.patientStatus == '5'}" src="/ikone/5.webp" alt="opservacija"/>
+                        <img th:if="${CaseOhbp.patientStatus == '0'}" src="/ikone/0.webp" alt="cekaonica/ostalo">
+                        <img th:if="${CaseOhbp.patientStatus == '1'}" src="/ikone/1.webp" alt="trijaza">
+                        <img th:if="${CaseOhbp.patientStatus == '2'}" src="/ikone/6.webp" alt="pregled dr/ostali postupci">
+                        <img th:if="${CaseOhbp.patientStatus == '3'}" src="/ikone/3.webp" alt="RTG, CT, MR">
+                        <img th:if="${CaseOhbp.patientStatus == '4'}" src="/ikone/4.webp" alt="Laboratorij">
+                        <img th:if="${CaseOhbp.patientStatus == '5'}" src="/ikone/5.webp" alt="opservacija">
                     </td>
-                    <td class="h2" th:text="${CaseOhbp.patientLocation}"/>
-
-                    <!-- printanje  -->
+                    <td class="h2" th:text="${CaseOhbp.patientLocation}">
+                        <!-- printanje  -->
+                    </td>
                     <td>
-                        <span th:text="${CaseOhbp.caseID}" id="cellId"></span>
-                        <button onclick="window.location.href='/printID'" id="printButton">Print</button>
+                        <span th:if="${not #strings.isEmpty(CaseOhbp.caseID)}" th:classappend="hasCaseId"></span>
+                        <button th:if="${not #strings.isEmpty(CaseOhbp.caseID)}" onclick="window.location.href='/printID'" id="printButton">
+                            <img th:src="@{/ikone/printer.webp}" alt="Icon">
+                        </button>
                     </td>
-                    <script>
-                        function printCell() {
-                            var cellId = document.getElementById("cellId").textContent;
-                            window.open('/print/' + CaseOhbp.caseID);
-                        }
-                    </script>
-
+                    <!--
+                                       <script>
+                                           function printCell() {
+                                               var cellId = document.getElementById("cellId").textContent;
+                                               window.open('/print/' + CaseOhbp.caseID);
+                                           }
+                                       </script>
+                                       -->
                 </tr>
                 </tbody>
-
             </table>
         </div>
-
         <div class="p-3 text-muted border-top">
             <div class="container-flex">
                 <div class="row d-flex justify-content-between">
                     <div class="col-lg-8 col-md-6">
-                        <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT
-                            Akademija
-                            2023</p>
+                        <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
                     </div>
                 </div>
             </div>
@@ -264,4 +232,5 @@
     </div>
 </div>
 </body>
+
 </html>
