--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -48,11 +48,7 @@
 
 
     <script>
-        // skripta za blinkanje zivotno ugroženi pacijent
-        var isBlinking = false;
-        var elementToBlink = document.getElementById("element-to-blink");
-        var intervalId;
-        var blinkStatus = localStorage.getItem("blinkStatus");
+
 
 
         function startBlink() {
@@ -67,8 +63,12 @@
             }
         }
 
+        var isBlinking = false;
+        var elementToBlink = document.getElementById("element-to-blink");
+        var intervalId;
+        var blinkStatus = localStorage.getItem("blinkStatus");
 
-        // ne rad da se nastavi blinkanje nakon promjene strance, za sad treba na svakoj stranici upaliti gumb
+
         window.onload = checkBlinkStatus;
         window.onbeforeunload = function () {
             if (isBlinking) {
@@ -84,6 +84,34 @@
 <div class="container-max-width p-3">
     <nav class="navbar navbar-expand-md navbar" style="">
         <div class="container-flex">
+            <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
+                <ul class="navbar-nav">
+                    <li class="h4 text-light text-center">
+                        <a class="nav-link mx-2" onclick="window.location.href='/'">Prijem</a>
+                    </li>
+                    <li class="h4 text-light text-center d-flex flex-grow-1">
+                        <a class="nav-link mx-2" onclick="window.location.href='/dashboard_ohbp'">Glavni prikaz</a>
+                    </li>
+                    <li class="h4 text-light text-center d-flex flex-grow-1">
+                        <a class="nav-link mx-2" onclick="window.location.href='/obs_ohbp'">Opservacija</a>
+                    </li>
+                    <li class="h4 text-light text-left d-flex flex-grow-1">
+                        <a class="nav-link mx-2" onclick="window.location.href='/patient_page'">Čekaonica</a>
+                    </li>
+                    <li class="h4 text-light text-left d-flex flex-grow-1">
+                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna kategorija</a>
+                    </li>
+                    <li class="h4 text-light text-left d-flex flex-grow-1">
+                        <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti opservacija</a>
+                    </li>
+                    <li class="h4 text-light text-center d-flex">
+                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
+                    </li>
+                    <li class="h4 text-light text-center d-flex">
+                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToBis'">BIS</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <div class="h-20 container-flex">
@@ -102,7 +130,7 @@
                 </div>
                 <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
                     <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
-                        <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
+                        <b>&nbsp; </b><b>&nbsp;</b></h2>
                 </div>
                 <div class="col-md-2 d-flex align-items-center justify-content-end">
                     <button onclick="startBlink()">
