--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -35,42 +35,30 @@
         .blink {
             animation: blink 1s infinite;
         }
-
     </style>
-
     <script>
         //timer za promjenu tranice
-        setTimeout(function () {
+        setTimeout(function() {
             window.location.href = "/redirectToDashboardOhbp";
         }, 1800000);
-
     </script>
-
-
     <script>
-
-
-
         function startBlink() {
             var elementToBlink = document.getElementById("element-to-blink");
             elementToBlink.classList.toggle("blink");
         }
-
 
         function checkBlinkStatus() {
             if (blinkStatus === "true") {
                 startBlink();
             }
         }
-
         var isBlinking = false;
         var elementToBlink = document.getElementById("element-to-blink");
         var intervalId;
         var blinkStatus = localStorage.getItem("blinkStatus");
-
-
         window.onload = checkBlinkStatus;
-        window.onbeforeunload = function () {
+        window.onbeforeunload = function() {
             if (isBlinking) {
                 localStorage.setItem("blinkStatus", "true");
             } else {
@@ -117,18 +105,17 @@
     <div class="h-20 container-flex">
         <div class="container-flex">
             <div id="md-8" style="" class="row">
-                <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
+                <div class="d-flex align-items-center justify-content-start col-md-2" style="">
                     <div class="display-4 p-3 d-flex justify-content-center align-items-center">
                         <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
                             <img src="../ikone/bolnicaLogo.svg" class="img-responsive"></a>
                     </div>
                 </div>
-                <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
-                    <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1"
-                        style="">
-                        <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
+                <div class="text-left d-flex justify-content-center align-items-center col-md-7" style="">
+                    <h3 class="display-4 text-primary" style="" >
+                        <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h3>
                 </div>
-                <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
+                <div class="d-flex align-items-center justify-content-center col-md-1" style="text-align: center;">
                     <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
                         <b>&nbsp; </b><b>&nbsp;</b></h2>
                 </div>
@@ -143,18 +130,15 @@
     <div class="" style="">
         <div class="container-flex">
             <div id="element-to-blink" class="toggleBlink">
-                <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI
-                    PACIJENT</h1>
+                <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI PACIJENT</h1>
             </div>
         </div>
     </div>
-    <div class="p-3 text-muted border-top" ></div>
+    <div class="p-3 text-muted border-top"></div>
     <div>
         <div class="container-flex">
-
             <table class="table table-responsive table-striped">
                 <thead>
-
                 <tr>
                     <th class="h3">Trijažna kategorija</th>
                     <th class="h3">ID</th>
@@ -165,40 +149,35 @@
                 </thead>
                 <tbody>
                 <tr th:each="CaseOhbp: ${allCases}">
-                    <td th:text="${CaseOhbp.triageCategory}"
-                        th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
+                    <td th:text="${CaseOhbp.triageCategory}" th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
                     </td>
                     <td class="h2" th:text="${CaseOhbp.caseID}"></td>
                     <td class="h2" th:text="${#dates.format(CaseOhbp.timeOfArrival, 'dd.MM.yyyy HH:mm:ss')}"></td>
                     <!--
-                  -->
-
+                        -->
                     <td class="h2">
                         <span th:text="${CaseOhbp.completedWork}"></span>
                         <span> / </span>
                         <span th:text="${CaseOhbp.workInProgress}"></span>
                     </td>
                     <td>
-                        <img th:if="${CaseOhbp.patientStatus == '0'}" src="/ikone/0.webp" alt="cekaonica/ostalo"/>
-                        <img th:if="${CaseOhbp.patientStatus == '1'}" src="/ikone/1.webp" alt="trijaza"/>
-                        <img th:if="${CaseOhbp.patientStatus == '2'}" src="/ikone/6.webp" alt="pregled dr/ostali postupci"/>
-                        <img th:if="${CaseOhbp.patientStatus == '3'}" src="/ikone/3.webp" alt="RTG, CT, MR"/>
-                        <img th:if="${CaseOhbp.patientStatus == '4'}" src="/ikone/4.webp" alt="Laboratorij"/>
-                        <img th:if="${CaseOhbp.patientStatus == '5'}" src="/ikone/5.webp" alt="opservacija"/>
+                        <img th:if="${CaseOhbp.patientStatus == '0'}" src="/ikone/0.webp" alt="cekaonica/ostalo">
+                        <img th:if="${CaseOhbp.patientStatus == '1'}" src="/ikone/1.webp" alt="trijaza">
+                        <img th:if="${CaseOhbp.patientStatus == '2'}" src="/ikone/2.webp" alt="pregled dr">
+                        <img th:if="${CaseOhbp.patientStatus == '3'}" src="/ikone/3.webp" alt="RTG, CT, MR">
+                        <img th:if="${CaseOhbp.patientStatus == '4'}" src="/ikone/4.webp" alt="Laboratorij">
+                        <img th:if="${CaseOhbp.patientStatus == '5'}" src="/ikone/5.webp" alt="opservacija">
+                        <img th:if="${CaseOhbp.patientStatus == '6'}" src="/ikone/6.webp" alt="ostalo">
                     </td>
                 </tr>
                 </tbody>
-
             </table>
         </div>
-
         <div class="p-3 text-muted border-top">
             <div class="container-flex">
                 <div class="row d-flex justify-content-between">
                     <div class="col-lg-8 col-md-6">
-                        <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT
-                            Akademija
-                            2023</p>
+                        <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
                     </div>
                 </div>
             </div>
@@ -206,4 +185,5 @@
     </div>
 </div>
 </body>
+
 </html>
