--- a/src/main/resources/templates/dashboard_ohbp.html
+++ b/src/main/resources/templates/dashboard_ohbp.html
@@ -38,7 +38,7 @@
     </style>
     <script>
         //timer za promjenu tranice
-        setTimeout(function () {
+        setTimeout(function() {
             window.location.href = "/redirectToDashboardOhbp";
         }, 1800000);
     </script>
@@ -59,10 +59,9 @@
                 startBlink();
             }
         }
-
         // ne rad da se nastavi blinkanje nakon promjene strance, za sad treba na svakoj stranici upaliti gumb
         window.onload = checkBlinkStatus;
-        window.onbeforeunload = function () {
+        window.onbeforeunload = function() {
             if (isBlinking) {
                 localStorage.setItem("blinkStatus", "true");
             } else {
@@ -71,13 +70,11 @@
         };
     </script>
 </head>
-
 <body onload="checkBlinkStatus()">
 <div class="container-max-width p-3">
     <nav class="navbar navbar-expand-md navbar" style="">
         <div class="container-flex">
-            <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent"
-                 style="">
+            <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
                 <ul class="navbar-nav">
                     <li class="h4 text-light text-center">
                         <a class="nav-link mx-2" onclick="window.location.href='/'">Prijem</a>
@@ -92,12 +89,10 @@
                         <a class="nav-link mx-2" onclick="window.location.href='/patient_page'">Čekaonica</a>
                     </li>
                     <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna
-                            kategorija</a>
+                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna kategorija</a>
                     </li>
                     <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti
-                            opservacija</a>
+                        <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti opservacija</a>
                     </li>
                     <li class="h4 text-light text-center d-flex">
                         <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
@@ -112,22 +107,21 @@
     <div class="h-20 container-flex">
         <div class="container-flex">
             <div id="md-8" style="" class="row">
-                <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
+                <div class="d-flex align-items-center justify-content-start col-md-2" style="">
                     <div class="display-4 p-3 d-flex justify-content-center align-items-center">
                         <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
                             <img src="../ikone/bolnicaLogo.svg" class="img-responsive"></a>
                     </div>
                 </div>
-                <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
-                    <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1"
-                        style="">
-                        <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
+                <div class="text-left d-flex justify-content-center align-items-center col-md-7" style="">
+                    <h3 class="display-4 text-primary" style="" >
+                        <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h3>
                 </div>
-                <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
+                <div class="d-flex align-items-center justify-content-center col-md-1" style="text-align: center;">
                     <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
                         <b>&nbsp;</b><b>&nbsp;</b></h2>
                 </div>
-                <div class="col-md-2 d-flex align-items-center justify-content-end">
+                <div class="d-flex align-items-center justify-content-end col-md-2">
                     <button onclick="startBlink()">
                         <img width="135px" src="../ikone/MediqueLogo.png" class="img-responsive"></button>
                 </div>
@@ -138,8 +132,7 @@
     <div class="" style="">
         <div class="container-flex">
             <div id="element-to-blink" class="toggleBlink">
-                <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI
-                    PACIJENT</h1>
+                <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI PACIJENT</h1>
             </div>
         </div>
     </div>
@@ -162,8 +155,7 @@
                 </thead>
                 <tbody>
                 <tr th:each="CaseOhbp: ${allCases}">
-                    <td th:text="${CaseOhbp.triageCategory}"
-                        th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
+                    <td th:text="${CaseOhbp.triageCategory}" th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
                     </td>
                     <td class="h2" th:text="${CaseOhbp.caseID}">
                     </td>
@@ -172,34 +164,29 @@
                     <td class="h2" th:text="${CaseOhbp.patientLastName}">
                     </td>
                     <td class="h2" th:text="${#dates.format(CaseOhbp.timeOfArrival, 'dd.MM.yyyy HH:mm:ss')}"></td>
-                    </td>
                     <td>
                         <div th:if="${CaseOhbp.patientReTriage == 1}">
-                            <img id="flashing-icon" src="../ikone/ret.webp"/>
+                            <img id="flashing-icon" src="../ikone/ret.webp" style="display: inline;">
                             <script th:inline="javascript">
                                 var icon = document.getElementById('flashing-icon');
-                                setInterval(function () {
+                                setInterval(function() {
                                     if (icon.style.display === 'none') {
                                         icon.style.display = 'inline';
                                     } else {
                                         icon.style.display = 'none';
                                     }
                                 }, 500);
-
-                                setTimeout(function () {
+                                setTimeout(function() {
                                     document.querySelector('img[src="../ikone/ret.webp"]').classList.remove('blinking');
                                 }, 10000);
-
                                 var lastBlinkTimestamp = localStorage.getItem('lastBlinkTimestamp');
                                 if (lastBlinkTimestamp && Date.now() - lastBlinkTimestamp < 10000) {
                                     document.querySelector('img[src="../ikone/ret.webp"]').classList.add('blinking');
                                 }
                             </script>
-
                         </div>
-
                         <div th:if="${CaseOhbp.patientReTriage == 0}">
-                            <img id="flashing-iconoff" src="../ikone/ret.webp" style="display:none;"/>
+                            <img id="flashing-iconoff" src="../ikone/ret.webp" style="display:none;">
                         </div>
                     </td>
                     <td class="h2">
@@ -210,11 +197,11 @@
                     <td>
                         <img th:if="${CaseOhbp.patientStatus == '0'}" src="/ikone/0.webp" alt="cekaonica/ostalo">
                         <img th:if="${CaseOhbp.patientStatus == '1'}" src="/ikone/1.webp" alt="trijaza">
-                        <img th:if="${CaseOhbp.patientStatus == '2'}" src="/ikone/6.webp"
-                             alt="pregled dr/ostali postupci">
+                        <img th:if="${CaseOhbp.patientStatus == '2'}" src="/ikone/2.webp" alt="pregled dr">
                         <img th:if="${CaseOhbp.patientStatus == '3'}" src="/ikone/3.webp" alt="RTG, CT, MR">
                         <img th:if="${CaseOhbp.patientStatus == '4'}" src="/ikone/4.webp" alt="Laboratorij">
                         <img th:if="${CaseOhbp.patientStatus == '5'}" src="/ikone/5.webp" alt="opservacija">
+                        <img th:if="${CaseOhbp.patientStatus == '6'}" src="/ikone/6.webp" alt="ostalo">
                     </td>
                     <td class="h2" th:text="${CaseOhbp.patientLocation}">
                         <!-- printanje  -->
@@ -233,8 +220,7 @@
             <div class="container-flex">
                 <div class="row d-flex justify-content-between">
                     <div class="col-lg-8 col-md-6">
-                        <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT
-                            Akademija 2023</p>
+                        <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
                     </div>
                 </div>
             </div>
@@ -242,4 +228,5 @@
     </div>
 </div>
 </body>
+
 </html>
