--- a/src/main/resources/templates/legend.html
+++ b/src/main/resources/templates/legend.html
@@ -51,20 +51,52 @@
 </head>
 
 <body class="container-max-width p-3">
+<nav class="navbar navbar-expand-md navbar" style="">
+    <div class="container-flex">
+        <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
+            <ul class="navbar-nav">
+                <li class="h4 text-light text-center">
+                    <a class="nav-link mx-2" onclick="window.location.href='/'">Prijem</a>
+                </li>
+                <li class="h4 text-light text-center d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/dashboard_ohbp'">Glavni prikaz</a>
+                </li>
+                <li class="h4 text-light text-center d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/obs_ohbp'">Opservacija</a>
+                </li>
+                <li class="h4 text-light text-left d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/patient_page'">Čekaonica</a>
+                </li>
+                <li class="h4 text-light text-left d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna kategorija</a>
+                </li>
+                <li class="h4 text-light text-left d-flex flex-grow-1">
+                    <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti opservacija</a>
+                </li>
+                <li class="h4 text-light text-center d-flex">
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
+                </li>
+                <li class="h4 text-light text-center d-flex">
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToBis'">BIS</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <div class="h-20 container-flex">
     <div class="container-flex">
         <div id="md-8" style="" class="row">
-            <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
+            <div class="d-flex align-items-center justify-content-start col-md-2" style="">
                 <div class="display-4 p-3 d-flex justify-content-center align-items-center">
                     <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
                         <img src="../ikone/bolnicaLogo.svg" class="img-responsive"></a>
                 </div>
             </div>
-            <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
-                <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1" style="">
-                    <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
+            <div class="text-left d-flex justify-content-center align-items-center col-md-7" style="">
+                <h3 class="display-4 text-primary" style="">
+                    <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h3>
             </div>
-            <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
+            <div class="d-flex align-items-center justify-content-center col-md-1" style="text-align: center;">
                 <h2 class="flex-grow-1 text-white" style="text-align: center"><b>D</b></h2>
             </div>
             <div class="col-md-2 d-flex align-items-center justify-content-end">
@@ -93,7 +125,7 @@
                         <h3 class=".d-print-table-cell">Dijagnostika</h3>
                     </th>
                     <th class="font-weight-bold">
-                        <h3 class="d-flex" >Opis</h3>
+                        <h3 class="d-flex">Opis</h3>
                     </th>
                 </tr>
                 </thead>
@@ -132,7 +164,7 @@
                     <td class="font-weight-bold">
                         <h3>OPSERVACIJA</h3>
                     </td>
-                    <td class="font-weight-bold d-flex text-left">
+                    <td class="font-weight-bold text-nowrap d-flex" >
                         <h3 class="text-nowrap">Pacijent se nalazi u opservaciji, tj.zbog zdravstvenog stanja potrebna je dodatna medicinska skrb.</h3>
                     </td>
                     <td class="font-weight-bold"></td>
@@ -183,7 +215,7 @@
                     <td class="font-weight-bold">
                         <h3></h3>
                     </td>
-                    <td class="font-weight-bold d-flex text-left">
+                    <td class="font-weight-bold text-left">
                         <h3 class="text-nowrap">Status izvršenosti pokazuje koliko je dijagnostičkih pretraga pacijent obavio u odnosu na broj upućenih dijagnostičkih pretraga od strane liječnika.</h3>
                     </td>
                     <td class="font-weight-bold"></td>
